--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,14 +1,23 @@
+/**, *:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -box-sizing: border-box;
+}*/
 body {
     margin: 0;
     padding: 0;
     color: #484848;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
     max-width: 1000px;
     margin: 30px auto;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
+    width: 100%;
+/*    align-items: center;
+    justify-content: center;*/
 }
