--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,101 +1,115 @@
 .filters {
-    background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
+    display: inline-block;
 }
+
 .search {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
     width: 20%;
+    border: none;
     border-radius: 4px;
+    margin-right: 30px;
+    float: right;
+    margin-top: 10px;
 }
-button {
-  font-size: 18px;
-  background-color: #FF5A5F;
-  color: #FFFFFF;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin-right: 30px;
-  opacity: 1;
-  transition: opacity 0.3s ease-in-out;
+.search:hover {
+    opacity: 0.9;
 }
-button:hover {
-  opacity: 0.9;
-}
-.locations, .amenities {
-    position: relative;
+
+.locations{
+    display: inline-block;
     height: 100%;
     width: 25%;
-    display: flex;
-    flex-direction: column;
-}
-.locations {
+    text-align: left;
+    float: left;
     border-right: #DDDDDD 1px solid;
+    vertical-align: middle;
 }
+
 .locations h3, .amenities h3 {
     font-weight: 600;
-    margin-bottom: 0px;
+    margin: 0;
+    padding-top: 20px;
+    padding-left: 50px;
 }
 .locations h4, .amenities h4 {
     font-weight: 400;
     font-size: 14px;
-    margin-top: 0px;
+    margin: 0;
+    padding-left: 50px;
+    padding-bottom: 10px;
 }
-.locations ul {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  padding: 10px 0;
-  margin: 0;
-  background-color: #FAFAFA;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  list-style: none;
+.locations .popover {
+    display: none;
+    position: absolute;
+    background-color: #FAFAFA;
+    border: 1px #DDD solid;
+    border-radius: 4px;
+    z-index: 1;
+    width: 25%;
+    max-width: 250px;
+    padding: 0 0 20px 0;
+    margin-top: 4px;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
 }
-
-.locations ul ul {
-  left: 100%;
-  top: 0;
-  width: auto;
-  min-width: 200px;
+.locations .popover h2 {
+    padding-top: 8px;
+    margin-bottom: 0px;
+    margin-left: 20px;
+}
+.locations:hover .popover {
+    display: block;
+    text-align: center;
 }
 
 .locations li {
-  padding: 5px 10px;
+    list-style-type: none;
+    padding: 3px;
+    text-align: left;
+    font-weight: 400;
+    font-size: 14px;
 }
-
-.locations li:hover {
-  background-color: #F5F5F5;
+.amenities{
+    display: inline-block;
+    height: 100%;
+    width: 25%;
+    text-align: left;
+    float: left;
+    vertical-align: middle;
 }
-
-.locations h2 {
-  font-size: 16px;
-  margin-bottom: 5px;
+.amenities .popover {
+    display: none;
+    position: absolute;
+    background-color: #FAFAFA;
+    border: 1px #DDD solid;
+    border-radius: 4px;
+    z-index: 1;
+    width: 25%;
+    max-width: 250px;
+    padding: 30px 0 30px 50px;
+    margin-top: 4px;
+    text-align: left;
+    align-items: center;
+    justify-content: space-between;
 }
-/* Popover */
-.popover {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  padding: 10px 0;
-  margin: 0;
-  background-color: #FAFAFA;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  list-style: none;
-  z-index: 1;
+.amenities li {
+    padding-top: 30px;
+    list-style-type: none;
+    padding: 2px;
+    text-align: left;
+    font-weight: 400;
+    font-size: 14px;
+}
+.amenities:hover .popover {
+    display: block;
+    text-align: center;
+    align-items: center;
 }
