--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,37 +1,23 @@
 .filters {
-  background-color: white;
-  height: 70px;
-  width: 100%;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 0 20px;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: inline-block;
 }
+
 .search {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
     width: 20%;
+    border: none;
     border-radius: 4px;
-
+    margin-right: 30px;
+    float: right;
+    margin-top: 10px;
 }
-button {
-  font-size: 18px;
-  background-color: #FF5A5F;
-  color: #FFFFFF;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin-right: 30px;
-  opacity: 1;
-  transition: opacity 0.3s ease-in-out;
+.search:hover {
+    opacity: 0.9;
 }
-button:hover {
-  opacity: 0.9;
-}
-
-
