--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,52 +1,54 @@
 .filters {
-    background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
+    display: inline-block;
 }
+
 .search {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
     width: 20%;
+    border: none;
     border-radius: 4px;
+    margin-right: 30px;
+    float: right;
+    margin-top: 10px;
 }
-button {
-  font-size: 18px;
-  background-color: #FF5A5F;
-  color: #FFFFFF;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin-right: 30px;
-  opacity: 1;
-  transition: opacity 0.3s ease-in-out;
+.search:hover {
+    opacity: 0.9;
 }
-button:hover {
-  opacity: 0.9;
-}
-.locations, .amenities {
+
+.locations{
+    display: inline-block;
     height: 100%;
     width: 25%;
-    display: flex;
-    flex-direction: column;
+    text-align: left;
+    float: left;
+    border-right: #DDDDDD 1px solid;
+    vertical-align: middle;
 }
-.locations {
-    border-right: #DDDDDD 1px solid ;
+.amenities{
+    display: inline-block;
+    height: 100%;
+    width: 25%;
+    text-align: left;
+    float: left;
+    vertical-align: middle;
 }
 .locations h3, .amenities h3 {
     font-weight: 600;
-    margin-bottom: 0px;
+    margin: 0;
+    padding-top: 20px;
+    padding-left: 50px;
 }
 .locations h4, .amenities h4 {
     font-weight: 400;
     font-size: 14px;
-    margin-top: 0px;
+    margin: 0;
+    padding-left: 50px;
+    padding-bottom: 10px;
 }
