--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,40 +1,54 @@
 .places {
-    display: inline-block;
-    text-align: -webkit-center;
-    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    margin-bottom: 30px;
 }
 .places h1 {
     font-size: 30px;
     text-align: left;
 }
+.article {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;    
+}
 article {
-    display: inline-block;
+    display: flex;
     width: 390px;
     padding: 20px;
     margin: 20px;
     border: #FF5A5F 1px solid;
     border-radius: 4px;
     text-align: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
+    padding-bottom: 30px;
 }
 article h2 {
     font-size: 30px;
     align-items: center;
     align-content: center;
-    display: inline-block;
+    margin-top: -1px;
+    padding-left: 0%;  
+    margin-bottom: 40px;  
 }
 .price_by_night {
-    display: grid;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    align-content: center;
-    color: #FF5A5F;
-    border: #FF5A5F 4px solid;
-    border-radius: 50%;
-    min-width: 60px;
+    position: absolute;    
     height: 60px;
-    width: 60px;
-    font-size: 30px;
-    float: right;
+    font-size: 30px;    
+    margin-top: 4px;
+    padding: 2px;
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
+    border-radius: 50%;
+    top: 10px;
+    right: 20px;
+    min-width: 60px;    
 }
 .information {
     border-top: 1px #DDDDDD solid;
@@ -76,7 +90,7 @@ article h2 {
 .user {
     display: flex;
     justify-content: left;
-    margin: 20px 0 20px;
+    margin: 0px 0 0px;
 }
 .description {
     display: flex;
